--- a/index.html
+++ b/index.html
@@ -5,25 +5,121 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="./assets/style/style.css">
   <script src="https://cdn.tailwindcss.com"></script>
   <script>
     tailwind.config = {
       theme: {
         extend: {
           colors: {
-            clifford: '#da373d',
+            main: '#071331',
+            lightwhite: '#ffffff59'
+          },
+          backgroundImage: {
+            linersvggraditant: 'radial-gradient(75.71% 75.71% at 26.43% 24.29%, #FFFFFF 0%, rgba(255, 255, 255, 0) 79.99%)'
+          }
+          , fontSize: {
+            'xxl': '23px',
+            '2xxl': '26px'
+          },
+          letterSpacing: {
+            low: '-0.02em',
+            light: '-0.03em',
+          },
+          dropShadow: {
+            'navsocail': ' 2px 10px 40px 0px #00000040',
+          },
+          boxShadow: {
+            'innerouter': '2px 10px 40px 0px #00000040,0px 0px 20px 0px #0095FF80 inset'
+          },
+          backgroundSize: {
+            'full': '100% 100%',
           }
         }
       }
     }
+
   </script>
 </head>
 
-<body>
-  <h1 class="text-3xl font-bold underline text-red-400">
-    Hello world!
-  </h1>
+<body class=" bg-main">
+  <header>
+    <nav class=" max-w-[1556px] px-3 mx-auto mt-[142px]">
+      <div class="max-w-[1411px]">
+        <div class="flex items-center justify-between ">
+          <div>
+            <ul>
+              <li>
+                <a href="#">
+                  <img src="./assets/images/png/logo.png" alt="logo" width="277" height="61">
+                  a>
+              </li>
+            </ul>
+          </div>
+          <div class=" flex items-center xl:gap-24 gap-12 2xl:gap-[157px]">
+            <ul class=" flex items-center gap-[60px]">
+              <li>
+                <a href="#product"
+                  class=" font-semibold font-barlow-condensed text-2xxl leading-6 tracking-light text-white flex items-center gap-2.5">Products
+                  <span><svg width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M1 1L5 5L9 1" stroke="#4367D1" stroke-width="2.5" />
+                    </svg>
+                  </span>
+                </a>
+              </li>
+              <li>
+                <a href="#developer"
+                  class=" font-semibold font-barlow-condensed text-2xxl leading-6 tracking-light text-white flex items-center gap-2.5">Developers
+                  <span><svg width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M1 1L5 5L9 1" stroke="#4367D1" stroke-width="2.5" />
+                    </svg>
+                  </span></a>
+              </li>
+              <li>
+                <a href="#learn"
+                  class=" font-semibold font-barlow-condensed text-2xxl leading-6 tracking-light text-white flex items-center gap-2.5">Learn
+                  <span><svg width="10" height="7" viewBox="0 0 10 7" fill="none" xmlns="http://www.w3.org/2000/svg">
+                      <path d="M1 1L5 5L9 1" stroke="#4367D1" stroke-width="2.5" />
+                    </svg>
+                  </span>
+                </a>
+              </li>
+            </ul>
+            <ul class=" flex item-cneter gap-4">
+              <li class="gap-5 flex items-center">
+                <a href="#"
+                  class="drop-shadow-navsocail relative z-[1] border-lightwhite border-[2px] rounded-full py-6 bg-full bg-linersvggraditant mix-blend-o verlay bg-no-repeat px-[21px] inline-block ">
+                  <img src="./assets/images/svg/twiiter.svg" class="min-h-6 min-w-7" alt="twiiter">
 
+                  <img src="./assets/images/svg/borderbottomtwitter.svg" alt="border-botom"
+                    class="absolute  bottom-[-2px]  left-[50%] translate-x-[-50%] ">
+
+                </a>
+                <a href="#"
+                  class="drop-shadow-navsocail relative z-[1] border-lightwhite border-[2px] rounded-full py-6 bg-full bg-linersvggraditant mix-blend-o verlay bg-no-repeat px-[21px] inline-block ">
+                  <img src="./assets/images/svg/discord.svg" width="26" height="24" class="min-h-6 min-w-7"
+                    alt="twiiter">
+                  <img src="./assets/images/svg/borderdiscord.svg" alt="border-botom"
+                    class="absolute  bottom-[-2px]  left-[50%] translate-x-[-50%] ">
+
+                </a>
+              </li>
+              <li>
+                <a href="#"
+                  class=" rounded-full text-xxl text-white uppercase text-nowrap  nowrap font-barlow-condensed font-semibold leading-5 tracking-low py-[27px] px-11 flex items-center gap-4 shadow-innerouter ">
+                  launch app
+                  <span>
+                    <img src="./assets/images/svg/arrownav.svg" height="24" width="24" class="min-w-6 min-h-6"
+                      alt="arrownav">
+                  </span>
+                </a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </header>
 </body>
 
 </html>
