--- a/index2.html
+++ b/index2.html
@@ -247,7 +247,7 @@
       </div>
       <div class="flex justify-center pt-[50px]"><img src="./assets2/images/svg/workline.svg" alt="workline"></div>
   <div class=' pt-7 flex justify-center items-center'>
-      <div class='bg-gradient-to-b from-[#FFFFFF] to-[#FFFFFF80] sm:max-w-[840px] w-full rounded-[35px] p-[2px] max-sm:rounded-2xl'>
+      <div class='bg-innerboxgradient sm:max-w-[840px] w-full rounded-[35px] p-[2px] max-sm:rounded-2xl'>
           <div class="bg-card w-full p-[15px] rounded-[35px] max-sm:rounded-2xl max-sm:pb-[56px]
           ">
             <div class="sm:flex  gap-[15px] w-full items-center">
